Bug 514575 - [Minor] Changing personal data does not enable File -> Save
Summary: [Minor] Changing personal data does not enable File -> Save
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-14 08:40 UTC by Paul Worrall
Modified: 2026-01-23 15:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2026-01-14 08:40:58 UTC
STEPS TO REPRODUCE
1. Start with no changes that need saving (File -> Save is disabled)
2. File -> Personal Data...
3. Change any of the data (e.g. Telephone number) and click OK

OBSERVED RESULT
Unable to save data because File -> Save is still disabled
Comment 1 Jack 2026-01-16 23:41:08 UTC
confirmed in a version compiled from head of master branch
Comment 2 Thomas Baumgart 2026-01-23 09:07:28 UTC
Git commit d796c42d5d077b45c7a44e278227976abe0e80f6 by Thomas Baumgart.
Committed on 22/01/2026 at 13:49.
Pushed by tbaumgart into branch 'master'.

Mark file as dirty after modifying user data
FIXED-IN: 5.2.2

M  +1    -0    kmymoney/mymoney/mymoneyfile.cpp

https://invent.kde.org/office/kmymoney/-/commit/d796c42d5d077b45c7a44e278227976abe0e80f6
Comment 3 Thomas Baumgart 2026-01-23 15:19:42 UTC
Git commit 428c6bd73b8c2dfbb7d942fe4392204f1be37eb1 by Thomas Baumgart.
Committed on 23/01/2026 at 15:17.
Pushed by tbaumgart into branch '5.2'.

Mark file as dirty after modifying user data
FIXED-IN: 5.2.2
(cherry picked from commit d796c42d5d077b45c7a44e278227976abe0e80f6)

M  +1    -0    kmymoney/mymoney/mymoneyfile.cpp

https://invent.kde.org/office/kmymoney/-/commit/428c6bd73b8c2dfbb7d942fe4392204f1be37eb1