Mark file as dirty after modifying user data

BUG: 514575
FIXED-IN: 5.2.2
(cherry picked from commit d796c42d5d077b45c7a44e278227976abe0e80f6)